# nix-fly-tgbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  fly.toml
src/: main.rs
src/web/: backend.rs  frontend.rs
templates/: index.html  post.html
