[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
axum = "0.6.0"
chrono = "0.4.23"
dotenv = "0.15.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.147", features = ["derive"] }
teloxide = { version = "0.11.1", features = ["macros"] }
tokio = { version = "1.21.2", features = ["full"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
